se agrega entity, repository, archivos para base de datos h2 y la configuracion de todo esto en el pom
