# swaggerCoopeuch.yml
@@ -9,7 +9,7 @@ info:
   license:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-host: "petstore.swagger.io"
+host: "Tareastore.swagger.io"
 basePath: "/v2"
 tags:
 - name: "Tarea"
@@ -37,7 +37,7 @@ paths:
       parameters:
       - in: "body"
         name: "body"
-        description: "Pet object that needs to be added to the store"
+        description: "Tarea object that needs to be added to the store"
         required: true
         schema:
           $ref: "#/definitions/Tarea"
@@ -63,7 +63,7 @@ paths:
       parameters:
       - in: "body"
         name: "body"
-        description: "Pet object that needs to be added to the store"
+        description: "Tarea object that needs to be added to the store"
         required: true
         schema:
           $ref: "#/definitions/Tarea"
@@ -71,7 +71,7 @@ paths:
         "400":
           description: "Invalid ID supplied"
         "404":
-          description: "Pet not found"
+          description: "Tarea not found"
         "405":
           description: "Validation exception"
       security:
@@ -86,7 +86,7 @@ paths:
       - "Tarea"
       summary: "Find tarea by ID"
       description: "Returns a single tarea"
-      operationId: "getPetById"
+      operationId: "getTareaById"
       produces:
       - "application/xml"
       - "application/json"
@@ -105,7 +105,7 @@ paths:
         "400":
           description: "Invalid ID supplied"
         "404":
-          description: "Pet not found"
+          description: "Tarea not found"
       security:
       - api_key: []
     delete:
@@ -141,7 +141,7 @@ paths:
 securityDefinitions:
   tareastore_auth:
     type: "oauth2"
-    authorizationUrl: "http://petstore.swagger.io/oauth/dialog"
+    authorizationUrl: "http://tareastore.swagger.io/oauth/dialog"
     flow: "implicit"
     scopes:
       write:tareas: "modify tareas in your account"
